@startuml

skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

class Ui {
        - isUserActive : boolean {static}

        + readUserCommand() : String
}

package jline3 #DDDDDD {
        class LineReader {
                # terminal : Terminal
        
                + nextLine() : String
        }

        class AggregateCompleter
}

class CommandCompleter {
        - addCompleter : ArgumentCompleter {static}
        - updateCompleter : ArgumentCompleter {static}
        - deleteCompleter : ArgumentCompleter {static}
        - restockCompleter : ArgumentCompleter {static}
        - sellCompleter : ArgumentCompleter {static}
        - searchCompleter : ArgumentCompleter {static}
        - listCompleter : ArgumentCompleter {static}
        - profitCompleter : ArgumentCompleter {static}
        - byeCompleter : ArgumentCompleter {static}
}

class CommandOptionAdder {
        - allCommandsOptionDescriptions : HashMap<String, ArrayList<OptDesc>> {static}

        + getAllCommandsOptionDescriptions() : HashMap<String, ArrayList<OptDesc>>
}

Ui -> "1" LineReader : reads from >
LineReader --> "completer" CommandCompleter
CommandCompleter --|> AggregateCompleter
CommandCompleter -d-> CommandOptionAdder : gets option descriptions from >

@enduml
